Fix T76324: face set operators not working from Python console by default

Operators should almost always implement exec() so that they can work without
user event input. In this case there was no reason to have invoke() at all
since no event is needed.